ger. reunião aula 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "cSpell.words": [
         "dtos",
         "Dtro",
+        "getmeet",
         "ispublic",
+        "meetmessages",
+        "rnum",
         "updateuser"
     ]
 }
