gerenciamento de reunão parte3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
+        "createmeet",
         "dtos",
         "Dtro",
         "getmeet",
         "ispublic",
+        "linkgenerator",
         "meetmessages",
         "rnum",
         "updateuser"
